--- a/css/style.production.css
+++ b/css/style.production.css
@@ -331,7 +331,7 @@ img {
   -ms-grid-columns: 0.5fr 1fr;
   grid-template-columns: 0.5fr 1fr;
   place-content: center;
-  height: 100%;
+  min-height: 100vh;
   padding: var(--main-padding);
 }
 
