--- a/css/style.production.css
+++ b/css/style.production.css
@@ -93,8 +93,8 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font: inherit;
   font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
 }
 
@@ -115,10 +115,6 @@ section {
 
 body {
   line-height: 1;
-  background-color: var(--body-bg);
-  color: var(--color-dark-1);
-  font-family: din-1451-lt-pro-engschrift, sans-serif;
-  font-size: 1rem;
 }
 
 ol,
@@ -131,11 +127,11 @@ q {
   quotes: none;
 }
 
-blockquote::before,
-blockquote::after,
-q::before,
-q::after {
-  content: '';
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
   content: none;
 }
 
@@ -145,15 +141,11 @@ table {
 }
 
 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-
   --header-padding: 1em 6em;
   --main-padding: 5em 4em;
   --mobile-padding: 2em 2em;
-  --shadow-1: 3px 3px 3em hsla(31, 33%, 68%, 0.7), -0.5em 1.5em 1.5em hsla(30, 11%, 4%, 0.134);
+  --shadow-1: 3px 3px 3em hsla(31, 33%, 68%, 0.7),
+    -0.5em 1.5em 1.5em hsla(30, 11%, 4%, 0.134);
   --shadow-2: -6px 7px 29px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -167,6 +159,7 @@ table {
   --header-bg: hsla(199, 17%, 16%, 1);
   --modal: hsla(199, 27%, 18%, 0.95);
   --link-hover: #e94f37;
+  --error: hsl(8, 80%, 36%);
   --btn-bg: #e94f37;
   --table-bg: hsla(37, 100%, 95%, 0.75);
   --nav-hover: hsl(31, 33%, 68%);
@@ -179,9 +172,25 @@ table {
   --cloud-grey: #bec1bf;
 }
 
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/*? element styles*/
+body {
+  background-color: var(--body-bg);
+  color: var(--color-dark-1);
+  font-family: din-1451-lt-pro-engschrift, sans-serif;
+  font-size: 1rem;
+}
+
 header,
 footer {
-  -webkit-box-shadow: 3px 3px 3em var(--color-dark-2), -3px -3px 3em var(--color-dark-2);
+  -webkit-box-shadow: 3px 3px 3em var(--color-dark-2),
+    -3px -3px 3em var(--color-dark-2);
   box-shadow: 3px 3px 3em var(--color-dark-2), -3px -3px 3em var(--color-dark-2);
 }
 
@@ -201,7 +210,7 @@ footer div {
 }
 
 footer > div > p {
-  margin: 1.2em 0;
+  margin: 1.2em 0em;
 }
 
 main {
@@ -224,6 +233,7 @@ a {
   -o-transition: color 0.3s ease;
 }
 
+/*? text styles */
 h1 {
   font-size: 2rem;
   font-weight: 700;
@@ -281,15 +291,11 @@ img {
 }
 
 .main__home--container > *:nth-child(1) {
-  grid-row: 1;
-  grid-column: 1;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
-.main__home--container > * :nth-child(2) {
-  grid-row: 1;
-  grid-column: 3;
+.main__home--container > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
@@ -331,7 +337,7 @@ img {
   -ms-grid-columns: 0.5fr 1fr;
   grid-template-columns: 0.5fr 1fr;
   place-content: center;
-  min-height: 100vh;
+  height: 100%;
   padding: var(--main-padding);
 }
 
@@ -358,7 +364,7 @@ img {
   -ms-grid-columns: 0.5fr 1fr;
   grid-template-columns: 0.5fr 1fr;
   place-content: center;
-  min-height: 90vh;
+  min-height: 80vh;
   padding: var(--main-padding);
 }
 
@@ -387,16 +393,12 @@ img {
   padding: 3em;
 }
 
-.main__contact--container > * :nth-child(1) {
-  grid-row: 1;
-  grid-column: 1;
+.main__contact--container > *:nth-child(1) {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
-.main__contact--container > * :nth-child(2) {
-  grid-row: 1;
-  grid-column: 3;
+.main__contact--container > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
@@ -507,7 +509,6 @@ img {
     right: 30.5%;
     z-index: 600;
   }
-
   .navigation__btn--middle::after {
     content: "";
     position: absolute;
@@ -525,7 +526,6 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
-
   .navigation__btn::before {
     content: "";
     position: absolute;
@@ -543,7 +543,6 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
-
   .navigation__btn::after {
     content: "";
     position: absolute;
@@ -561,7 +560,6 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
-
   .navigation-bg {
     display: block;
     z-index: 100;
@@ -577,7 +575,6 @@ img {
     -ms-transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
     -o-transition: all 1s cubic-bezier(0.86, 0, 0.07, 1);
   }
-
   .navigation__container {
     visibility: hidden;
     opacity: 0;
@@ -593,7 +590,6 @@ img {
     -ms-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
     -o-transition: all 0.8s cubic-bezier(0.86, 0, 0.07, 1);
   }
-
   .navigation__list {
     display: block;
     position: absolute;
@@ -606,16 +602,26 @@ img {
     -ms-transform: translate(-33%, -30%);
     -o-transform: translate(-33%, -30%);
   }
-
   .navigation__item {
     margin: 1rem 0;
   }
-
   .navigation__link:link,
   .navigation__link:visited {
     display: inline-block;
-    background-image: -o-linear-gradient(240deg, transparent 5%, var(--link-hover), transparent 50%, var(--header-bg) 50%);
-    background-image: linear-gradient(210deg, transparent 5%, var(--link-hover), transparent 50%, var(--header-bg) 50%);
+    background-image: -o-linear-gradient(
+      240deg,
+      transparent 5%,
+      var(--link-hover),
+      transparent 50%,
+      var(--header-bg) 50%
+    );
+    background-image: linear-gradient(
+      210deg,
+      transparent 5%,
+      var(--link-hover),
+      transparent 50%,
+      var(--header-bg) 50%
+    );
     background-size: 210%;
     background-position: 0%;
     font-size: 2rem;
@@ -627,14 +633,12 @@ img {
     -ms-transition: all 0.4s ease-in-out;
     -o-transition: all 0.4s ease-in-out;
   }
-
   .navigation__link:hover,
   .navigation__link:active {
     color: var(--nav-hover);
     background-size: 380%;
     background-position: -2%;
   }
-
   .navigation__checkbox:checked ~ .navigation-bg {
     position: fixed;
     -webkit-transform: scale(50);
@@ -643,14 +647,14 @@ img {
     height: 100vh;
     width: 100vw;
   }
-
   .navigation__checkbox:checked ~ .navigation__container {
     top: 1.5em;
     visibility: visible;
     opacity: 1;
   }
-
-  .navigation__checkbox:checked ~ .navigation__btn .navigation__btn--middle::after {
+  .navigation__checkbox:checked
+    ~ .navigation__btn
+    .navigation__btn--middle::after {
     right: -1rem;
     width: 20px;
     height: 3px;
@@ -662,7 +666,6 @@ img {
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
-
   .navigation__checkbox:checked ~ .navigation__btn::before {
     content: "";
     position: absolute;
@@ -680,7 +683,6 @@ img {
     -ms-transition: all 0.3s ease-out;
     -o-transition: all 0.3s ease-out;
   }
-
   .navigation__checkbox:checked ~ .navigation__btn::after {
     right: 35%;
     -webkit-transition: all 0.3s ease-out;
@@ -832,7 +834,7 @@ img {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  padding: 0 0;
+  padding: 0em 0em;
 }
 
 .home__inner a {
@@ -856,7 +858,7 @@ img {
 }
 
 .about__copy {
-  padding: 0 5em;
+  padding: 0em 5em;
   font-size: 2rem;
   text-align: center;
   margin: 2.2em auto;
@@ -915,7 +917,7 @@ img {
 }
 
 .about__skills td {
-  padding: 0 2em;
+  padding: 0em 2em;
   border-bottom: 1px solid var(--color-dark-1);
 }
 
@@ -935,9 +937,9 @@ img {
   justify-content: center;
 }
 
-.about__cv--btn {
+.about__cv --btn {
   background-color: var(--cloud-grey);
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   border-radius: 30px;
   border: none;
   font-size: 1.2rem;
@@ -953,12 +955,15 @@ img {
 }
 
 .illustration {
+  /* margin-top:-4em; */
+  /* overflow: hidden; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
   top: 0.5em;
   z-index: -1;
+  /* z-index: -1; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
@@ -966,6 +971,47 @@ img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+}
+
+.contact__info {
+  padding: 1em 0;
+}
+
+.contact__info--phone,
+.contact__info--email {
+  color: var(--link-hover);
+}
+
+.contact__form {
+  padding: 1em 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+
+.contact__form--button {
+  text-align: center;
+  font-family: poppins;
+  margin: 1em 0 0 0;
+  font-size: 1.2rem;
+  width: 50%;
+  background-color: var(--link-hover);
+  color: var(--color-white);
+  border: none;
+  border-radius: 6px;
+  padding: 0.4em 0;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+}
+
+.contact__form label {
+  margin-top: 2em;
 }
 
 /*
@@ -1003,44 +1049,32 @@ img {
   }
 }
 
-.project__container > * :nth-child(1) {
-  grid-row: 1;
-  grid-column: 1;
+.project__container > *:nth-child(1) {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
-.project__container > * :nth-child(2) {
-  grid-row: 1;
-  grid-column: 3;
+.project__container > *:nth-child(2) {
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
 
-.project__container > * :nth-child(3) {
-  grid-row: 1;
-  grid-column: 5;
+.project__container > *:nth-child(3) {
   -ms-grid-row: 1;
   -ms-grid-column: 5;
 }
 
-.project__container > * :nth-child(4) {
-  grid-row: 3;
-  grid-column: 1;
+.project__container > *:nth-child(4) {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
 }
 
-.project__container > * :nth-child(5) {
-  grid-row: 3;
-  grid-column: 3;
+.project__container > *:nth-child(5) {
   -ms-grid-row: 3;
   -ms-grid-column: 3;
 }
 
-.project__container > * :nth-child(6) {
-  grid-row: 3;
-  grid-column: 5;
+.project__container > *:nth-child(6) {
   -ms-grid-row: 3;
   -ms-grid-column: 5;
 }
@@ -1056,45 +1090,27 @@ img {
     column-gap: 3em;
     row-gap: 4em;
   }
-
-  .project__container > * :nth-child(1) {
-    grid-row: 1;
-    grid-column: 1;
+  .project__container > *:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
   }
-
-  .project__container > * :nth-child(2) {
-    grid-row: 1;
-    grid-column: 3;
+  .project__container > *:nth-child(2) {
     -ms-grid-row: 1;
     -ms-grid-column: 3;
   }
-
-  .project__container > * :nth-child(3) {
-    grid-row: 3;
-    grid-column: 1;
+  .project__container > *:nth-child(3) {
     -ms-grid-row: 3;
     -ms-grid-column: 1;
   }
-
-  .project__container > * :nth-child(4) {
-    grid-row: 3;
-    grid-column: 3;
+  .project__container > *:nth-child(4) {
     -ms-grid-row: 3;
     -ms-grid-column: 3;
   }
-
-  .project__container > * :nth-child(5) {
-    grid-row: 5;
-    grid-column: 1;
+  .project__container > *:nth-child(5) {
     -ms-grid-row: 5;
     -ms-grid-column: 1;
   }
-
-  .project__container > * :nth-child(6) {
-    grid-row: 5;
-    grid-column: 3;
+  .project__container > *:nth-child(6) {
     -ms-grid-row: 5;
     -ms-grid-column: 3;
   }
@@ -1111,18 +1127,17 @@ img {
     column-gap: 3em;
     row-gap: 4em;
   }
-
-  .project__container > * :nth-child(1) {
-    grid-row: 1;
-    grid-column: 1;
+  .project__container > *:nth-child(1) {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
   }
 }
 
 .project__card {
-  -webkit-box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7), -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
-  box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7), -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
+  -webkit-box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7),
+    -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
+  box-shadow: 3px 3px 3em rgba(200, 174, 146, 0.7),
+    -0.5em 1.5em 1.5em rgba(11, 10, 9, 0.134);
 }
 
 .project__card--image {
@@ -1151,11 +1166,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1165,11 +1178,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1179,11 +1190,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1193,11 +1202,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1207,11 +1214,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1221,11 +1226,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #2e2e2e;
   }
@@ -1235,11 +1238,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #103b51;
   }
@@ -1249,11 +1250,9 @@ img {
   0% {
     fill: #eae0d5;
   }
-
   50% {
     fill: #2e2e2e;
   }
-
   100% {
     fill: #103b51;
   }
@@ -1267,19 +1266,16 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
-
   to {
     -webkit-transform: translate(200px, 50px);
     transform: translate(200px, 50px);
   }
 }
-
 @keyframes cloud-move-1 {
   from {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
-
   to {
     -webkit-transform: translate(200px, 50px);
     transform: translate(200px, 50px);
@@ -1291,7 +1287,6 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
-
   to {
     -webkit-transform: translate(400px, 50px);
     transform: translate(400px, 50px);
@@ -1303,7 +1298,6 @@ img {
     -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
-
   to {
     -webkit-transform: translate(400px, 50px);
     transform: translate(400px, 50px);
@@ -1315,10 +1309,9 @@ img {
     -webkit-transform: translate(100px, 50px);
     transform: translate(100px, 50px);
   }
-
   to {
-    -webkit-transform: translate(200px, 0);
-    transform: translate(200px, 0);
+    -webkit-transform: translate(200px, 0px);
+    transform: translate(200px, 0px);
   }
 }
 
@@ -1327,13 +1320,9 @@ img {
     -webkit-transform: translate(100px, 50px);
     transform: translate(100px, 50px);
   }
-
   to {
-    -webkit-transform: translate(200px, 0);
-    transform: translate(200px, 0);
-    -moz-transform: translate(200px, 0);
-    -ms-transform: translate(200px, 0);
-    -o-transform: translate(200px, 0);
+    -webkit-transform: translate(200px, 0px);
+    transform: translate(200px, 0px);
   }
 }
 
@@ -1358,6 +1347,7 @@ img {
 }
 
 #light-switch-1 {
+  /*animation: light-switch 2s infinite 20s linear alternate;*/
   -webkit-animation-duration: 8.5s;
   animation-duration: 8.5s;
   -webkit-animation-name: light-switch-1;
@@ -1439,4 +1429,8 @@ img {
   .mt-3 {
     margin-top: 4em;
   }
+}
+
+.error-message {
+  color: var(--error);
 }
